# apps/api/src/app/app.module.ts
@@ -5,9 +5,10 @@ import { CatalogModule } from './catalog/catalog.module';
 import { CategoriesModule } from './categories/categories.module';
 import { BrandsModule } from './brands/brands.module';
 import { OrdersModule } from './orders/orders.module';
+import { InventoryModule } from './inventory/inventory.module';
 
 @Module({
-  imports: [CatalogModule, CategoriesModule, BrandsModule, OrdersModule],
+  imports: [CatalogModule, CategoriesModule, BrandsModule, InventoryModule, OrdersModule],
   controllers: [AppController],
   providers: [AppService],
 })
