# apps/api/src/app/orders/orders.module.ts
@@ -2,8 +2,10 @@ import { Module } from '@nestjs/common';
 import { OrdersController } from './orders.controller';
 import { OrdersService } from './orders.service';
 import { OrdersRepository, InMemoryOrdersRepository } from './orders.repository';
+import { InventoryModule } from '../inventory/inventory.module';
 
 @Module({
+  imports: [InventoryModule],
   controllers: [OrdersController],
   providers: [OrdersService, { provide: OrdersRepository, useClass: InMemoryOrdersRepository }],
   exports: [OrdersService],
